--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Продолжение less16 </h1>
+    <h1 class="title">Продолжение less16 </h1>
     <p>Lorem ipsum dolor sit amet.</p>
     
 </body>
