--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1 class="title">Продолжение less16 </h1>
     <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, atque. Perspiciatis obcaecati rem consequatur nobis accusantium error dolorum ducimus temporibus deserunt quisquam! Voluptas excepturi dolorum iusto, molestias unde ducimus soluta?</p>
     
 </body>
 </html>
